--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -2,66 +2,58 @@
 <ui version="4.0">
  <class>MainWindow</class>
  <widget class="QMainWindow" name="MainWindow">
+  <property name="enabled">
+   <bool>true</bool>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>868</width>
-    <height>625</height>
+    <width>604</width>
+    <height>363</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Super Fenêtre</string>
   </property>
+  <property name="autoFillBackground">
+   <bool>false</bool>
+  </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(77, 77, 77);</string>
+   <string notr="true">background-image: url(:/securit.jpg);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QPushButton" name="Exit">
     <property name="geometry">
      <rect>
-      <x>780</x>
-      <y>550</y>
+      <x>520</x>
+      <y>290</y>
       <width>80</width>
       <height>24</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(170, 0, 0);</string>
+     <string notr="true">background-color: rgb(170, 0, 0);
+color: rgb(255, 255, 255);</string>
     </property>
     <property name="text">
      <string>Exit</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="RSA">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>330</y>
-      <width>101</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">color: rgb(0, 0, 0);
-background-color: rgb(170, 85, 0);</string>
-    </property>
-    <property name="text">
-     <string>RSA</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="AES">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>270</y>
-      <width>101</width>
-      <height>41</height>
+      <x>10</x>
+      <y>230</y>
+      <width>111</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(170, 15, 255);
-color: rgb(0, 0, 0);</string>
+     <string notr="true">background-color: rgb(32, 159, 226);
+color: rgb(255, 255, 255);
+font: 11pt &quot;Segoe UI&quot;;
+font: 700 9pt &quot;Segoe UI&quot;;</string>
     </property>
     <property name="text">
      <string>AES</string>
@@ -70,28 +62,140 @@ color: rgb(0, 0, 0);</string>
    <widget class="QPushButton" name="SHA256">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>210</y>
-      <width>101</width>
-      <height>41</height>
+      <x>10</x>
+      <y>50</y>
+      <width>111</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(255, 170, 255);
-color: rgb(0, 0, 0);</string>
+     <string notr="true">background-color: rgb(32, 159, 226);
+color: rgb(255, 255, 255);
+font: 11pt &quot;Segoe UI&quot;;
+font: 700 9pt &quot;Segoe UI&quot;;</string>
     </property>
     <property name="text">
      <string>SHA256</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEditsha256">
+   <widget class="QPushButton" name="RSA">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>180</y>
-      <width>113</width>
-      <height>24</height>
+      <x>10</x>
+      <y>140</y>
+      <width>111</width>
+      <height>61</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(32, 159, 226);
+font: 11pt &quot;Segoe UI&quot;;
+font: 700 9pt &quot;Segoe UI&quot;;
+color: rgb(255, 255, 255);</string>
+    </property>
+    <property name="text">
+     <string>RSA</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="MODESHA256">
+    <property name="geometry">
+     <rect>
+      <x>210</x>
+      <y>0</y>
+      <width>191</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-image: url(:/fondnoir.jpg);
+border-color: rgb(0, 85, 255);</string>
+    </property>
+    <property name="text">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:20pt; font-weight:700; color:#ffffff;&quot;&gt;Mode SHA256&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="MODEAES">
+    <property name="geometry">
+     <rect>
+      <x>210</x>
+      <y>0</y>
+      <width>191</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-image: url(:/fondnoir.jpg);</string>
+    </property>
+    <property name="text">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:20pt; font-weight:700; color:#ffffff;&quot;&gt;Mode AES&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="MODERSA">
+    <property name="geometry">
+     <rect>
+      <x>210</x>
+      <y>0</y>
+      <width>191</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-image: url(:/fondnoir.jpg);
+border-color: rgb(0, 85, 255);</string>
+    </property>
+    <property name="text">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:20pt; font-weight:700; color:#ffffff;&quot;&gt;Mode RSA&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="RSAParcourir">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>160</y>
+      <width>161</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(85, 255, 0);
+color: rgb(255, 255, 255);</string>
+    </property>
+    <property name="text">
+     <string>Choisir le Fichier a Crypté</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="RSAParcourir_2">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>250</y>
+      <width>161</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(85, 255, 0);
+color: rgb(255, 255, 255);</string>
+    </property>
+    <property name="text">
+     <string>Choisir le Fichier a Crypté</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="SHA256Parcourir">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>70</y>
+      <width>161</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(85, 255, 0);
+color: rgb(255, 255, 255);</string>
+    </property>
+    <property name="text">
+     <string>Choisir le Fichier a Crypté</string>
     </property>
    </widget>
   </widget>
@@ -100,7 +204,7 @@ color: rgb(0, 0, 0);</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>868</width>
+     <width>604</width>
      <height>21</height>
     </rect>
    </property>
