--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -14,7 +14,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Super Fenêtre</string>
+   <string>Application de Sécurité</string>
   </property>
   <property name="autoFillBackground">
    <bool>false</bool>
@@ -44,9 +44,9 @@ color: rgb(255, 255, 255);</string>
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>230</y>
+      <y>150</y>
       <width>111</width>
-      <height>61</height>
+      <height>71</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -63,9 +63,9 @@ font: 700 9pt &quot;Segoe UI&quot;;</string>
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>50</y>
+      <y>60</y>
       <width>111</width>
-      <height>61</height>
+      <height>71</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -82,9 +82,9 @@ font: 700 9pt &quot;Segoe UI&quot;;</string>
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>140</y>
+      <y>240</y>
       <width>111</width>
-      <height>61</height>
+      <height>71</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -147,12 +147,12 @@ border-color: rgb(0, 85, 255);</string>
      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:20pt; font-weight:700; color:#ffffff;&quot;&gt;Mode RSA&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="RSAParcourir">
+   <widget class="QPushButton" name="SHA256fichier">
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>160</y>
-      <width>161</width>
+      <y>80</y>
+      <width>151</width>
       <height>31</height>
      </rect>
     </property>
@@ -161,16 +161,16 @@ border-color: rgb(0, 85, 255);</string>
 color: rgb(255, 255, 255);</string>
     </property>
     <property name="text">
-     <string>Choisir le Fichier a Crypté</string>
+     <string>Hachage de votre Fichier </string>
     </property>
    </widget>
-   <widget class="QPushButton" name="AESParcourir">
+   <widget class="QPushButton" name="RSAchiffrer">
     <property name="geometry">
      <rect>
       <x>130</x>
       <y>250</y>
-      <width>161</width>
-      <height>31</height>
+      <width>158</width>
+      <height>24</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -178,16 +178,16 @@ color: rgb(255, 255, 255);</string>
 color: rgb(255, 255, 255);</string>
     </property>
     <property name="text">
-     <string>Choisir le Fichier a Crypté</string>
+     <string>Fichier à chiffrer</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="SHA256Parcourir">
+   <widget class="QPushButton" name="RSAdechiffrer">
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>70</y>
-      <width>161</width>
-      <height>31</height>
+      <y>280</y>
+      <width>158</width>
+      <height>24</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -195,7 +195,121 @@ color: rgb(255, 255, 255);</string>
 color: rgb(255, 255, 255);</string>
     </property>
     <property name="text">
-     <string>Choisir le Fichier a Crypté</string>
+     <string>Fichier à dechiffrer</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="AESchiffrer">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>160</y>
+      <width>158</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(85, 255, 0);
+color: rgb(255, 255, 255);</string>
+    </property>
+    <property name="text">
+     <string>Fichier à chiffrer</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="AESdechiffrer">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>190</y>
+      <width>158</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(85, 255, 0);
+color: rgb(255, 255, 255);</string>
+    </property>
+    <property name="text">
+     <string>Fichier à dechiffrer</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="RSAchargementclepv">
+    <property name="geometry">
+     <rect>
+      <x>390</x>
+      <y>110</y>
+      <width>131</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(255, 255, 255);</string>
+    </property>
+    <property name="text">
+     <string>Chargement clé privée</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="RSAchargementclepu">
+    <property name="geometry">
+     <rect>
+      <x>390</x>
+      <y>160</y>
+      <width>131</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(255, 255, 255);</string>
+    </property>
+    <property name="text">
+     <string>Chargement clé public</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="RSAgenerer">
+    <property name="geometry">
+     <rect>
+      <x>380</x>
+      <y>210</y>
+      <width>151</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(255, 255, 255);</string>
+    </property>
+    <property name="text">
+     <string>Générer clé privée et public</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="AESchargementclepv">
+    <property name="geometry">
+     <rect>
+      <x>390</x>
+      <y>140</y>
+      <width>131</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(255, 255, 255);</string>
+    </property>
+    <property name="text">
+     <string>Chargement clé privée</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="AESgenerer">
+    <property name="geometry">
+     <rect>
+      <x>380</x>
+      <y>180</y>
+      <width>151</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(255, 255, 255);</string>
+    </property>
+    <property name="text">
+     <string>Générer clé privée</string>
     </property>
    </widget>
   </widget>
